# Gnome-Gadu

./: AUTHORS  COPYING  ChangeLog  LICENSE  Makefile.am  README  README.md  autogen.sh  config.h.in  configure.in  gnome-gadu.desktop
debian/: changelog  control  copyright  files  gnome-gadu.install  gnome-gadu.lintian-overrides  gnome-gadu.menu  rules
pixmaps/: Makefile.am  Makefile.in  chmurka.xcf
po/: LINGUAS  POTFILES.in  en.po  pl.po
src/: Makefile.am  eggtrayicon.c  gnomegadu.glade  gnomegadu_conf.c  gnomegadu_conf.h  gnomegadu_galago.c  gnomegadu_galago.h  gnomegadu_history.c  gnomegadu_history.h  gnomegadu_protocol.c  gnomegadu_protocol.h  gnomegadu_stock.c  gnomegadu_stock.h  gnomegadu_tray.c  gnomegadu_tray.h  gnomegadu_ui.c  gnomegadu_ui.h  gnomegadu_ui_account_chooser.c  gnomegadu_ui_account_chooser.h  gnomegadu_ui_accounts_pref.c  gnomegadu_ui_accounts_pref.h  gnomegadu_ui_chat.c  gnomegadu_ui_chat.h  gnomegadu_ui_export_userlist.c  gnomegadu_ui_export_userlist.h  gnomegadu_ui_import_userlist.c  gnomegadu_ui_import_userlist.h  gnomegadu_ui_notify.c  gnomegadu_ui_notify.h  gnomegadu_ui_register_account.c  gnomegadu_ui_register_account.h  gnomegadu_ui_status.c  gnomegadu_ui_status.h  gnomegadu_ui_user_add.c  gnomegadu_ui_user_add.h  gnomegadu_ui_user_edit.c  gnomegadu_ui_user_edit.h  gnomegadu_userlist.c  gnomegadu_userlist.h  gossip-cell-renderer-expander.c  (+1 more)
