imagedir = $(datadir)/GnomeGadu

image_DATA =		\
	comments.png	\
	group.png    	\
	user_add.png	\
	user_delete.png	\
	user_edit.png 	\
	book_next.png	\
	book_previous.png	\
	folder_user.png	\
	vcard_add.png	\
	layout_edit.png \
	connect.png	\
	user_orange.png \
	user_orange_away.png \
	user_red.png	\
	user_green.png	\
	connect.png	\
	vcard.png	\
	user.png	\
	user_big.svg	\
	font_add.png

EXTRA_DIST = $(image_DATA)


