imagedir = $(datadir)/GnomeGadu

image_DATA =		\
	comments.png	\
	gnomegadu-group.png    	\
	user_add.png	\
	user_delete.png	\
	user_edit.png 	\
	book_next.png	\
	book_previous.png	\
	folder_user.png	\
	vcard_add.png	\
	layout_edit.png \
	connect.png	\
	gnomegadu-user-available.png \
	gnomegadu-user-away.png \
	gnomegadu-user-invisible.png	\
	gnomegadu-user-not-available.png \
	user_green.png	\
	connect.png	\
	vcard.png	\
	user_big.svg	\
	icon.png \
	gnomegadu-description.png

EXTRA_DIST = $(image_DATA)


