imagedir = $(datadir)/$(PACKAGE_NAME)

image_DATA =		\
	comments.png	\
	gnomegadu-group.png    	\
	gnomegadu-user-add.png	\
	gnomegadu-user-delete.png	\
	gnomegadu-user-edit.png 	\
	gnomegadu-userlist-import.png	\
	gnomegadu-userlist-export.png	\
	folder_user.png	\
	vcard_add.png	\
	layout_edit.png \
	connect.png	\
	gnomegadu-user-available.png \
	gnomegadu-user-away.png \
	gnomegadu-user-invisible.png	\
	gnomegadu-user-not-available.png \
	user_green.png	\
	connect.png	\
	gnomegadu-vcard.png	\
	user_big.svg	\
	icon.png \
	gnomegadu-description.png

EXTRA_DIST = $(image_DATA)


