# bin
bin_PROGRAMS = gnomegadu

gnomegadu_SOURCES = main.c \
		    gnomegadu_ui.c \
		    gnomegadu_ui.h \
		    gnomegadu_conf.c \
		    gnomegadu_conf.h \
		    gnomegadu_ui_accounts_pref.c \
		    gnomegadu_ui_accounts_pref.h \
		    gnomegadu_ui_account_chooser.c \
		    gnomegadu_ui_account_chooser.h \
		    gnomegadu_ui_register_account.c \
		    gnomegadu_ui_register_account.h \
		    gnomegadu_ui_import_userlist.c \
		    gnomegadu_ui_import_userlist.h \
		    gnomegadu_userlist.c \
		    gnomegadu_userlist.h \
		    gnomegadu_ui_user_add.c \
		    gnomegadu_ui_user_add.h \
		    gnomegadu_ui_user_edit.c \
		    gnomegadu_ui_user_edit.h \
		    gnomegadu_ui_status.c \
		    gnomegadu_ui_status.h \
		    gnomegadu_protocol.c \
		    gnomegadu_protocol.h \
		    gnomegadu_ui_notify.c \
		    gnomegadu_ui_notify.h \
		    gnomegadu_tray.c \
		    gnomegadu_tray.h \
		    gnomegadu_ui_chat.c \
		    gnomegadu_ui_chat.h \
		    gnomegadu_history.c \
		    gnomegadu_history.h \
		    gnomegadu_galago.c  \
		    gnomegadu_galago.h  \
		    gnomegadu_stock.h \
		    gnomegadu_stock.c \
		    gossip-cell-renderer-expander.c \
		    gossip-cell-renderer-expander.h

gnomegadu_CFLAGS = $(CFLAGS) -DPACKAGE_DATA_DIR=\"$(pkgdatadir)\"

gladedir = $(pkgdatadir)
glade_DATA = gnomegadu.glade
